--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
         "laravel/tinker": "^2.0",
         "laravel/ui": "^2.4",
         "laravelcollective/html": "^6.2",
+        "simplesoftwareio/simple-qrcode": "^4.1",
         "spatie/laravel-permission": "^3.17"
     },
     "require-dev": {
